projects/DigitPop-Player/src/app/video/video.component.scss
/* ... */
@media only screen and (max-height: 412px) and (max-width: 550px) {
  .product-buy-now {
    @include product-buy-now($gridRowStart: 28, $gridRowSpan: 30, $fontSize: 14px);
  }
}

@media only screen and (max-height: 412px) and (min-width: 550px) {
  .product-buy-now {
    @include product-buy-now($fontSize: 14px);
  }
}

@media only screen and (min-height: 413px) and (max-height: 565px) and (max-width: 550px) {
  .product-buy-now {
    @include product-buy-now($fontSize: 20px);
  }
}

@media only screen and (min-height: 565px) and (max-width: 550px) {
  .product-buy-now {
    @include product-buy-now($gridRowStart: 16, $gridRowSpan: 18, $fontSize: 20px);
  }
}

@media only screen and (min-height: 565px) and (min-width: 551px) {
  .product-buy-now {
    @include product-buy-now($fontSize: 20px);
  }
}

.video-player-overlay {
  position: absolute;
  z-index: 100;
  width: 100%;
  height: 100%;
  background-color: transparent;
}

.video-player {
  pointer-events: none;

  span {
    pointer-events: none;
  }
}

.play-ad-video {
  z-index: 99;
  height: 100vh;
  width: 100vw;
}

.button-quiz-grid {
  grid-column: 39/40;
  grid-row: 1/2;
}

.button-locate-grid {
  grid-column: 40/41;
  grid-row: 1/2;
}

.button-prev-grid {
  grid-column: 41/42;
  grid-row: 1/2;
}

.button-next-grid {
  grid-column: 43/44;
  grid-row: 1/2;
}

.button-up-grid {
  grid-column: 44/45;
  grid-row: 1/2;
}

.button-all-grid {
  grid-column: 42/43;
  grid-row: 1/2;
}

.button-base.disabled {
  opacity: 0.3;
}

.button-help-grid {
  grid-column: 47/48;
  grid-row: 1/2;
}

.button-base:not(.disabled):hover {
  background-position: center bottom;
}

.button-base:not(.disabled):active > div {
  background-position: center bottom;
}

.fa-share-alt:before {
  content: "\f1e0";
}

.fa-share-alt-square:before {
  content: "\f1e1";
}

.mat-icon-button.large {
  width: 48px;
  height: 48px;
  line-height: 48px;
  background-color: transparent;

  .mat-icon {
    font-size: 48px;
    width: 48px;
    height: 48px;
    line-height: 48px;
    color: white;
  }
}

.start-quiz {
  width: 48px;
  position: relative;
  background: none;
  border-radius: 50%;

  &:before,
  &:after {
    z-index: 2;
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    background-color: #fff6df;
    border-radius: 50%;
    transform: scale(0.5);
    transform-origin: center center;
    animation: pulse 3s linear infinite;
  }

  &:after {
    opacity: 0;
    animation-delay: 2s;
  }
}

.start-quiz img {
  z-index: 5;
  width: 48px;
  height: 48px;
  border-radius: 50%;
}

.start-quiz:hover {
  box-shadow: 0 0 5px #ffe985,
  0 0 25px #ffe985,
  0 0 50px #ffe985,
  0 0 100px #ffe985;
  background: #ffe985;
}

.coin-shine {
  overflow: hidden;
  position: absolute;
  display: block;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
}

.coin-shine:after {
  content: "";
  opacity: 0.25;
  position: absolute;
  display: block;
  width: 7px;
  height: 200%;
  background-color: white;
  border-radius: 1px;
  transform: rotate(45deg) translateY(-30%);
  animation: shine 3s linear infinite;
}

.container {
  width: 100vw;
  height: 100vh;
  background-color: #202020;
}

.video-thumbnail {
  position: absolute;
  left: 50%;
  top: 50%;
  height: auto;
  width: auto;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  max-width: 100%;
  max-height: 100%;
}

.sound-status {
  opacity: 0.65;
  cursor: pointer;
  z-index: 105;
  position: absolute;
  top: 30px;
  right: 30px;
  width: 25px;
  height: 25px;
}

.canvas {
  z-index: 101;
}

.main-product-grid {
  z-index: 101;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: repeat(24, 1fr);
  column-gap: 10px;
  position: absolute;
  left: 0;
  top: 0;
}

[hidden] {
  display: none !important;
}

.button-resume-grid {
  grid-column: 2/3;
  grid-row: 1/2;
}

.products-container {
  display: flex;
  flex-flow: row wrap;
  row-gap: 10px;
}

.example-viewport {
  height: 200px;
  width: 200px;
  border: 1px solid black;
}

::ng-deep .simplebar-scrollbar::before {
  background-color: #cdcdcd !important;
}

.all-pg-thumbnail {
  position: relative;
  width: 200px;
  height: 200px;
  overflow: hidden;
}

.all-pg-thumbnail img {
  position: absolute;
  left: 50%;
  top: 50%;
  height: 100%;
  width: auto;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.all-products {
  display: grid;
  grid-template-columns: 200px;
  grid-template-rows: 50px 250px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
}

.all-pg-title {
  grid-row: 1/2;
  grid-column: 1/2;
  width: 100%;
  height: 30px;
  font-size: 26px;
}

.all-products-image {
  grid-row: 2/3;
  grid-column: 1/2;
  height: 200px;
}

@keyframes pulse {
  0% {
    transform: scale(0.5);
    opacity: 0;
  }
  50% {
    opacity: 0.05;
  }
  70% {
    opacity: 0.02;
  }
  100% {
    transform: scale(2);
    opacity: 0;
  }
}

@keyframes shine {
  0% {
    transform: rotate(45deg) translateX(-700%) translateY(-30%);
  }
  100% {
    transform: rotate(45deg) translateX(700%) translateY(-30%);
  }
}

